# terrainGeneration

./: .gitignore  CMakeLists.txt  glad.c  main.cpp
graphics/: mesh.cpp  mesh.h  shaders.cpp  shaders.h  terrain.hpp  textures.cpp  textures.h
graphics/noise/: fractal.cpp  fractal.h  polynomial.cpp  polynomial.h  simplex.cpp  simplex.h
io/: camera.cpp  camera.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  screen.cpp  screen.h
resources/: materials.txt
resources/shaders/: framebuffer.fs  framebuffer.vs  shader.fs  shader.vs  sky.fs  sky.vs  skybox.vs  temp.fs  temp.vs
